# Indi-Cosmos

./: .gitignore
Indi-Cosmos/: CMakeLists.txt  CMakeLists.txt.user.0eb152c  CMakeLists.txt.user.3cf1752  CMakeLists.txt.user.e49e20f  Indi-Cosmos_es_ES.ts  cambiarvalor.cpp  cambiarvalor.h  cambiarvalor.ui  conectar.cpp  conectar.h  conectar.ui  device.cpp  device.h  device.ui  dfdsafda.ui  foto.cpp  foto.h  foto.ui  images.qrc  indigolib.cpp  indigolib.h  itemblob.cpp  itemblob.h  itemblob.ui  itemlight.cpp  itemlight.h  itemlight.ui  itemnumero.cpp  itemnumero.h  itemnumero.ui  itemswitch.cpp  itemswitch.h  itemswitch.ui  itemtexto.cpp  itemtexto.h  itemtexto.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+6 more)
Indi-Cosmos/html/: annotated.html  annotated_dup.js  cambiarvalor_8h_source.html  class_cambiar_valor-members.html  class_cambiar_valor.html  class_cambiar_valor.js  class_main_window-members.html  class_main_window.html  class_main_window.js  classconectar-members.html  classconectar.html  classconectar.js  classdevice-members.html  classdevice.html  classdevice.js  classes.html  classfoto-members.html  classfoto.html  classfoto.js  classindigolib-members.html  classindigolib.html  classindigolib.js  classitemblob-members.html  classitemblob.html  classitemblob.js  classitemlight-members.html  classitemlight.html  classitemlight.js  classitemnumero-members.html  classitemnumero.html  classitemnumero.js  classitemswitch-members.html  classitemswitch.html  classitemswitch.js  classitemtexto-members.html  classitemtexto.html  classitemtexto.js  classpropiedad-members.html  classpropiedad.html  classpropiedad.js  (+21 more)
Indi-Cosmos/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  functions_1.js  (+9 more)
Indi-Cosmos/latex/: annotated.tex  cambiarvalor_8h_source.tex  class_cambiar_valor.eps  class_cambiar_valor.tex  class_main_window.tex  classconectar.eps  classconectar.tex  classdevice.eps  classdevice.tex  classfoto.eps  classfoto.tex  classindigolib.eps  classindigolib.tex  classitemblob.eps  classitemblob.tex  classitemlight.eps  classitemlight.tex  classitemnumero.eps  classitemnumero.tex  classitemswitch.eps  classitemswitch.tex  classitemtexto.eps  classitemtexto.tex  classpropiedad.eps  classpropiedad.tex  conectar_8h_source.tex  device_8h_source.tex  files.tex  foto_8h_source.tex  hierarchy.tex  indigolib_8h_source.tex  itemblob_8h_source.tex  itemlight_8h_source.tex  itemnumero_8h_source.tex  itemswitch_8h_source.tex  itemtexto_8h_source.tex  mainwindow_8h_source.tex  propiedad_8h_source.tex  refman.tex
(+692 files in other folders)
